--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>my lesson git github</title>
-
   </head>
   <body>
     <h1>my lesson git github</h1>
+    <h4>this is the new branch nouri</h4>
+    <div>
+        
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
