modifier lors de git remote

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <title>my lesson git github</title>
   </head>
   <body>
-    <h1>my lesson git github</h1>
-    <h4>this is the new branch nouri</h4>
-    <div>
-        
-    </div>
+    <h1>this is update</h1>
+    <h4>this is the new branch nour</h4>
+    <div></div>
     <script src="app.js"></script>
   </body>
 </html>
